--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "slidePage",
-  "version": "3.1.8",
+  "name": "slidepage",
+  "version": "3.1.9",
   "description": "slidePage.js is a simple and universal to use libary to create fullscreen scrolling websites",
   "main": "dist/slidePage.min.js",
   "directories": {
