--- a/package.json
+++ b/package.json
@@ -37,6 +37,6 @@
     "gulp-clean-css": "^3.9.2",
     "gulp-cli": "^2.0.0",
     "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^3.0.0",
+    "gulp-uglify": "^3.0.0"
   }
 }
